# Hcontact

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  bench_h2.py  bench_h2_cputime.py  bench_h2_memory.py  bench_hmatrix.py  bench_pr.py  compare_tamaas.py  compare_tamaas_h2.py  example_rough_contact.py  hmatrix_halfspace_revisited_codex.md  leaf_size_bench.py  tamaas_reference.py  visualize_hmatrix.py  visualize_hmatrix_big.py
data/: tamaas_meta.json
doc/plans/: 2026-06-12-hmatrix-contact.md  2026-06-27-h2-fmm-operator.md
doc/slides/: .gitignore  generate_figures.py  slides.aux  slides.nav  slides.out  slides.tex  slides.toc
doc/slides/sections/: hertz.tex  hmatrix.tex  performance.tex  rough.tex
doc/specs/: 2026-06-12-slides-design.md  2026-06-21-pcg-theory-design.md  2026-06-27-h2-fmm-operator-design.md  2026-06-30-spectral-preconditioner-design.md
doc/theory/: h2_fmm.tex  h2_fmm_detailed.tex  pcg.tex  references.bib
experiments/: bench_cpp_precond.py  nested_grid.py  precond_pcg.py  precond_results.md
include/: boussinesq_kernel.hpp  cheb_basis.hpp  cluster_tree.hpp  contact_solver.hpp  fourier_precond.hpp  h2_operator.hpp  hmatrix.hpp  nested_solve.hpp  uniform_quadtree.hpp
python/: bindings.cpp
src/: boussinesq_kernel.cpp  cheb_basis.cpp  cluster_tree.cpp  contact_solver.cpp  fourier_precond.cpp  h2_operator.cpp  hmatrix.cpp  nested_solve.cpp  uniform_quadtree.cpp
tests/: tamaas_test.py  test_contact.cpp  test_h2.cpp  test_h2.py  test_hmatrix.cpp  test_kernel.cpp  test_nested.py  test_precond.cpp
